--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "css-loader": "^0.26.2",
     "flexboxgrid": "^6.3.1",
     "gh-pages": "^0.12.0",
-    "jspdf": "^1.3.3",
     "material-ui": "^0.17.0",
+    "pdfmake": "^0.1.26",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-flexbox-grid": "^0.10.2",
